<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ruler="http://schemas.kevalpatel2106.com/ruler-picker"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textAlignment="center"
        tools:context="com.example.bait2073mobileapplicationdevelopment.profile.RequestGenderActivity">


        <ImageView
            android:id="@+id/img_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:layout_marginStart="24dp"
            android:padding="12dp"

            app:srcCompat="@drawable/baseline_arrow_back_24" />


        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_marginLeft="@dimen/profile_margin_left"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/weightHeightTitle"
            android:textSize="@dimen/titleFont" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/profile_margin_left"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/subHeightWeightTitle"
            android:textColor="@color/gray"
            android:textSize="@dimen/titleSubFont"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="63dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Height"
                style="@android:style/TextAppearance.Material.Body1"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/heightPicker"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="cm"
                android:layout_marginRight="23dp"
                style="@android:style/TextAppearance.Material.Body1"/>

            <TextView
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Weight"
                style="@android:style/TextAppearance.Material.Body1"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/weightPicker"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="kg"
                style="@android:style/TextAppearance.Material.Body1"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Add any other views you want here -->

        </LinearLayout>

        <Button
            android:id="@+id/next_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:paddingTop="@dimen/btn_padding"
            android:text="@string/next"
            android:textSize="17sp" />

    </LinearLayout>
</ScrollView>
